--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Ignore all environment files (except templates).
 /.env*
 !/.env*.erb
+!/.env.template
 
 # Ignore all logfiles and tempfiles.
 /log/*
@@ -36,3 +37,4 @@
 
 /app/assets/builds/*
 !/app/assets/builds/.keep
+/config/deploy.yml
