--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,6 @@
 KAMAL_REGISTRY_PASSWORD="KAMAL_REGISTRY_PASSWORD"
-SECRET_KEY_BASE="bundle exec rails secret"
+RAILS_MASTER_KEY="RAILS_MASTER_KEY"
+POSTGRES_PASSWORD="POSTGRES_PASSWORD"
+POSTGRES_URL="POSTGRES_URL"
+REDIS_PASSWORD="REDIS_PASSWORD"
+REDIS_URL="REDIS_URL"
