--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,13 +5,11 @@ test:
   adapter: test
 
 staging:
-  adapter: async
-#  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL", "")%>
-#  channel_prefix: kamal_workshops_app_staging
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: kamal_workshops_app_staging
 
 production:
-  adapter: async
-#  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL", "") %>
-#  channel_prefix: kamal_workshops_app_production
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: kamal_workshops_app_production
