--- a/config/database.yml
+++ b/config/database.yml
@@ -1,52 +1,23 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
+# PostgreSQL. Versions 9.3 and up are supported.
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: blog_space_development
 
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: blog_space_test
 
 staging:
   <<: *default
-  database: storage/staging.sqlite3
+  database: blog_space_staging
+  url: <%= ENV["POSTGRES_URL"] %>
 
 production:
   <<: *default
-  database: storage/production.sqlite3
-
-
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-#default: &default
-#  adapter: postgresql
-#  encoding: unicode
-#  pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-#development:
-#  <<: *default
-#  database: blog_space_development
-
-#test:
-#  <<: *default
-#  database: blog_space_test
-
-#staging:
-#  <<: *default
-#  database: blog_space_staging
-#  url: <%#= ENV["POSTGRES_URL"] %>
-
-#production:
-#  <<: *default
-#  database: blog_space_production
-#  url: <%#= ENV["POSTGRES_URL"] %>
+  database: blog_space_production
+  url: <%= ENV["POSTGRES_URL"] %>
