Add worker code to main to remove apps code manipulation

--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,6 @@ development:
   <<: *default
   database: storage/development.sqlite3
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: storage/test.sqlite3
@@ -23,3 +20,24 @@ test:
 production:
   <<: *default
   database: storage/production.sqlite3
+
+
+# PostgreSQL. Versions 9.3 and up are supported.
+#
+#default: &default
+#  adapter: postgresql
+#  encoding: unicode
+#  pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+
+#development:
+#  <<: *default
+#  database: blog_space_development
+
+#test:
+#  <<: *default
+#  database: blog_space_test
+
+#production:
+#  <<: *default
+#  database: blog_space_production
+#  url: <%#= ENV["POSTGRES_URL"] %>
