--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,6 +4,12 @@ development:
 test:
   adapter: test
 
+staging:
+  adapter: async
+#  adapter: redis
+#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#  channel_prefix: kamal_workshops_app_staging
+
 production:
   adapter: async
 #  adapter: redis
