--- a/config/cable.yml
+++ b/config/cable.yml
@@ -7,11 +7,11 @@ test:
 staging:
   adapter: async
 #  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#  url: <%#= ENV.fetch("REDIS_URL", "")%>
 #  channel_prefix: kamal_workshops_app_staging
 
 production:
   adapter: async
 #  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+#  url: <%#= ENV.fetch("REDIS_URL", "") %>
 #  channel_prefix: kamal_workshops_app_production
