--- a/config/deploy.yml.example
+++ b/config/deploy.yml.example
@@ -27,7 +27,7 @@ env:
 #  clear:
 #    DB_HOST: 192.168.0.2
   secret:
-    - RAILS_MASTER_KEY
+    - SECRET_KEY_BASE
     - POSTGRES_PASSWORD
     - POSTGRES_URL
     - REDIS_PASSWORD
