use DATABASE_URL

--- a/config/deploy.yml.example
+++ b/config/deploy.yml.example
@@ -29,7 +29,7 @@ env:
   secret:
     - SECRET_KEY_BASE
     - POSTGRES_PASSWORD
-    - POSTGRES_URL
+    - DATABASE_URL
     - REDIS_PASSWORD
     - REDIS_URL
 
