--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,6 @@
 KAMAL_REGISTRY_PASSWORD="KAMAL_REGISTRY_PASSWORD"
 RAILS_MASTER_KEY="RAILS_MASTER_KEY"
 POSTGRES_PASSWORD="POSTGRES_PASSWORD"
-POSTGRES_URL="POSTGRES_URL"
+DATABASE_URL="POSTGRES_URL"
 REDIS_PASSWORD="REDIS_PASSWORD"
 REDIS_URL="REDIS_URL"
