--- a/config/deploy.yml.example
+++ b/config/deploy.yml.example
@@ -2,102 +2,39 @@
 service: blog-space
 
 # Name of the container image.
-image: [USERNAME]/blog-space ## CHANGE ME
+# DOCKER_HUB_USERNAME is name of Docker Hub account.
+# Get it from the companion app at kamal.cklos.foo
+# Your Docker Hub credentials => Username
+image: kamaldh0/blog-space ## CHANGE ME
 
 # Deploy to these servers.
-# implicit form
 servers:
-  - [HOST IP] ## CHANGE ME
-
-# explicit form of:
-# servers:
-#   web:
-#     hosts:
-#       - [HOST IP]
+  # Get it from the companion app at kamal.cklos.foo
+  # One of the hosts
+  - 255.255.255.255 ## CHANGE ME
 
 # Credentials for your image host.
 registry:
-  # Specify the registry server, if you're not using Docker Hub
-  # server: registry.digitalocean.com / ghcr.io / ...
-  username: [USERNAME] ## CHANGE ME
-
-  # Always use an access token rather than real password when possible.
+  username: kamaldh0 ## CHANGE ME
   password:
     - KAMAL_REGISTRY_PASSWORD
 
 # Inject ENV variables into containers (secrets come from .env).
 # Remember to run `kamal env push` after making changes!
 env:
-#  clear:
-#    DB_HOST: 192.168.0.2
+  clear:
+    FOO: bar
   secret:
     - SECRET_KEY_BASE
 
-# Use a different ssh user than root
-# ssh:
-#   user: app
-
+# Configure the builder to use for building the image.
 builder:
   remote:
     arch: amd64
     host: ssh://build@[BUILDER IP] ## CHANGE ME
 
-# Use accessory services (secrets come from .env).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     port: 3306
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: redis:7.0
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
 
-# Configure custom arguments for Traefik. Be sure to reboot traefik when you modify it.
-# traefik:
-#   args:
-#     accesslog: true
-#     accesslog.format: json
-
-# Configure a custom healthcheck (default is /up on port 3000)
-# healthcheck:
-#   path: /healthz
-#   port: 4000
-
-# Bridge fingerprinted assets, like JS and CSS, between versions to avoid
+# Bridge fingerprinted assets, between versions to avoid
 # hitting 404 on in-flight requests. Combines all files from new and old
 # version inside the asset_path.
-#
-# If your app is using the Sprockets gem, ensure it sets `config.assets.manifest`.
-# See https://github.com/basecamp/kamal/issues/626 for details
-#
 asset_path: /rails/public/assets
-
-# Configure rolling deploys by setting a wait time between batches of restarts.
-# boot:
-#   limit: 10 # Can also specify as a percentage of total hosts, such as "25%"
-#   wait: 2
-
-# Configure the role used to determine the primary_host. This host takes
-# deploy locks, runs health checks during the deploy, and follow logs, etc.
-#
-# Caution: there's no support for role renaming yet, so be careful to cleanup
-#          the previous role on the deployed hosts.
-# primary_role: web
-
-# Controls if we abort when see a role with no hosts. Disabling this may be
-# useful for more complex deploy configurations.
-#
-# allow_empty_roles: false
