--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,9 @@
 # PostgreSQL. Versions 9.3 and up are supported.
+#
 default: &default
   adapter: postgresql
   encoding: unicode
+  port: 5432
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -14,34 +16,14 @@ test:
 
 staging:
   <<: *default
-  database: blog_space_staging
+  host:     <%= ENV['POSTGRES_HOST'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
 
 production:
   <<: *default
-  database: storage/production.sqlite3
-
-
-# PostgreSQL. Versions 9.3 and up are supported.
-#
-#default: &default
-#  adapter: postgresql
-#  encoding: unicode
-#  pool: <%#= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-
-#development:
-#  <<: *default
-#  database: blog_space_development
-
-#test:
-#  <<: *default
-#  database: blog_space_test
-
-#staging:
-#  <<: *default
-#  database: blog_space_staging
-#  url: <%#= ENV["POSTGRES_URL"] %>
-
-#production:
-#  <<: *default
-#  database: blog_space_production
-#  url: <%#= ENV["POSTGRES_URL"] %>
+  host:     <%= ENV['POSTGRES_HOST'] %>
+  database: <%= ENV['POSTGRES_DB'] %>
+  username: <%= ENV['POSTGRES_USER'] %>
+  password: <%= ENV['POSTGRES_PASSWORD'] %>
