--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,13 +5,13 @@ test:
   adapter: test
 
 staging:
-  adapter: async
-#  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL", "") %>
-#  channel_prefix: blog_space_staging
+#  adapter: async
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: blog_space_staging
 
 production:
-  adapter: async
-#  adapter: redis
-#  url: <%= ENV.fetch("REDIS_URL", "") %>
-#  channel_prefix: blog_space_production
+#  adapter: async
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: blog_space_production
