Update to Kamal 2 (#1)
* Update ruby to 3.4.1. Update project to Kamal 2. Update tasks to workshop v2.

* Update README

--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,13 +5,11 @@ test:
   adapter: test
 
 staging:
-  adapter: async
-#  adapter: redis
-#  url: <%#= ENV.fetch("REDIS_URL", "") %>
-#  channel_prefix: blog_space_staging
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: blog_space_staging
 
 production:
-  adapter: async
-#  adapter: redis
-#  url: <%= ENV.fetch("REDIS_URL", "") %>
-#  channel_prefix: blog_space_production
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL", "") %>
+  channel_prefix: blog_space_production
